Thu Feb 19 14:18:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): creates target directories before
	  copying.  [ruby-core:21958]

	* lib/mkmf.rb (create_makefile): removes directories in the depth
	  order.

Thu Feb 19 13:56:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_home_dir): checks if HAVE_PWD_H.  [ruby-dev:38049]

Thu Feb 19 08:45:48 2009  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>

	* ext/socket/rubysocket.h: add "#include <sys/stat.h>"

Thu Feb 19 03:42:48 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ancillary_rights): new method.
	  (make_io_for_rights): new function to allocate
	  IOs for FDs in SCM_RIGHTS message.
	  (bsock_recvmsg_internal): use make_io_for_rights.  So the FDs can be
	  closed by GC.

Thu Feb 19 03:28:59 2009  Akinori MUSHA  <knu@iDaemons.org>

	* README.EXT, README.EXT.ja: Improve the document about
	  rb_scan_args() even more.

Thu Feb 19 03:12:51 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_file_exhaustive.rb: skip some tests if euid == 0. 
	  a patch from Lucas Nussbaum in [ruby-core:22209].

Thu Feb 19 03:00:49 2009  Akinori MUSHA  <knu@iDaemons.org>

	* README.EXT, README.EXT.ja: Improve the document about
	  rb_scan_args().

Wed Feb 18 22:47:01 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (discard_cmsg_resource): new function to close
	  file descriptors in control message.
	  (bsock_recvmsg_internal): call discard_cmsg_resource before retrying
	  recvmsg.

Wed Feb 18 21:47:37 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): prevent misalignment.

Wed Feb 18 21:34:30 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_sendmsg_internal): prevent misalignment.

Wed Feb 18 21:09:43 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): reduce code on
	  environments which have no control message.
