@@ -1,4 +1,6 @@
-Thu Feb 19 14:18:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Thu Feb 19 14:22:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/mkmf.rb (create_makefile): added phony targets.
 
 	* lib/mkmf.rb (create_makefile): creates target directories before
 	  copying.  [ruby-core:21958]
